feat: implement field-level authorization, reorganize project structure, and refactor organization and port management modules